hphp/test/zend/bad/tests/security/open_basedir_is_writable.php
<?php
require_once "open_basedir.inc";
test_open_basedir("is_writable");
?>
<?php
require_once "open_basedir.inc";
delete_directories();
?>